spacing fix

--- a/assets/section-home-hero.css
+++ b/assets/section-home-hero.css
@@ -40,20 +40,20 @@ a {
 }
 
 .hero-video-container {
-    width: 100vw;
-    height: 100vh;
+	width: 100vw;
+	height: 100vh;
 }
 
 .hero-video-container.home {
-    z-index: 1;
-    background-image: linear-gradient(#000, rgba(255, 255, 255, 0) 51%);
-    position: relative;
+	z-index: 1;
+	background-image: linear-gradient(#000, rgba(255, 255, 255, 0) 51%);
+	position: relative;
 }
 
 .hero-bottom-container {
 	position: absolute;
 	width: 100%;
-	height: 5.625rem;
+	height: 9rem;
 	left: 0%;
 	top: auto;
 	right: 0%;
@@ -75,8 +75,8 @@ a {
 
 .social-link {
 	color: white;
-	padding-left: 0.5rem;
-	padding-right: 0.5rem;
+	padding-left: 0.8rem;
+	padding-right: 0.8rem;
 	font-family: "Fa brands 400", sans-serif;
 	font-size: 20px;
 	text-decoration: none;
@@ -87,8 +87,8 @@ a {
 }
 
 .scroll-down-container {
-	width: 2.125rem;
-	height: 2.125rem;
+	width: 3.4rem;
+	height: 3.4rem;
 	border: 2px solid #c5ae94;
 	border-radius: 20px;
 	justify-content: center;
